# kneed

./: Cargo.toml  Justfile  README.md
.github/workflows/: rust.yml
src/: data_generator.rs  knee_locator.rs  lib.rs  shape_detector.rs
