[package]
name = "kneed"
version = "1.0.0"
edition = "2021"
repository = "https://github.com/vihu/kneed"
authors = ["Rahul Garg"]
description = "Pure rust implementation of Knee-point detection"
license = "BSD-3-Clause"
readme = "README.md"
keywords = ["knee", "kneedle", "knee-point", "kneed"]
homepage = "https://github.com/vihu/kneed"

[dependencies]
anyhow = "1"
polyfit-rs = "0"
thiserror = "1"

[dev-dependencies]
approx = "0"
rand = "0"
rand_distr = "0"

[features]
testing = []
